Converted new Byte(byte) to Byte.valueOf(byte) (and same for Integer) to take advantage of cached boxed primitives where possible. Enhanced checking for EOF in JpegSegmentReader. Added overload of BufferReader.getString that takes a charset. Created hashCode method for Rational as it overrides equals. Speedier iteration of map via Map.Entry<T,U> type. Removed a few "catch (Exception)" clauses, substituting for more specific types. Fixed a few potential errors when left-shifting bytes (with MSB set) without masking. Added some more sample images.
Thanks to Andreas Ziermann for reporting most of the coding issues included in this changeset via Findbugs (http://findbugs.sourceforge.net/).

git-svn-id: https://metadata-extractor.googlecode.com/svn/trunk@50 7bd79e3c-ab28-1fa5-d007-79fa9fde61af